Fix scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ a:hover   { color: #aaa; }
   width: 42em;
   margin: 0 auto 2em;
   padding-top: 3em;
+  padding-top: 3em;
   line-height: 1.5em;
   position: relative;
 }
